ItableMetaDataを引数で受け取る個所をAddSettingTableMetaDataを受け取るように修正